# Renderide

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.ini
crates/renderide/: Cargo.toml  build.rs  build_support.rs  openxr_windows_arch.rs
crates/renderide/build_support/: git.rs  openxr_loader.rs  shader.rs  xr_assets.rs
crates/renderide/build_support/shader/: compose.rs  directives.rs  emit.rs  error.rs  model.rs  modules.rs  parallel.rs  source.rs  validation.rs
crates/renderide/shaders/: LICENSE  debug_world_normals.wgsl  debug_world_normals_multiview.wgsl  mesh_blendshape.wgsl  mesh_skinning.wgsl
crates/renderide/shaders/materials/: billboardunlit.wgsl  blur.wgsl  cadshader.wgsl  channelmatrix.wgsl  circle.wgsl  cubemapprojection.wgsl  depthprojection.wgsl  faceexplodeshader.wgsl  fresnel.wgsl  fresnellerp.wgsl  gamma.wgsl  getdepth.wgsl  gradientskybox.wgsl  grayscale.wgsl  hsv.wgsl  invert.wgsl  invisible.wgsl  lut.wgsl  lut_perobject.wgsl  matcap.wgsl  newunlitshader.wgsl  nosamplers.wgsl  null.wgsl  overlay.wgsl  overlayfresnel.wgsl  overlayunlit.wgsl  paintpbs.wgsl  pbscolormask.wgsl  pbscolormaskspecular.wgsl  pbscolorsplat.wgsl  pbscolorsplatspecular.wgsl  pbsdisplace.wgsl  pbsdisplaceshadow.wgsl  pbsdisplacespecular.wgsl  pbsdisplacespeculartransparent.wgsl  pbsdisplacetransparent.wgsl  pbsdistancelerp.wgsl  pbsdistancelerpspecular.wgsl  pbsdistancelerpspeculartransparent.wgsl  pbsdistancelerptransparent.wgsl  (+65 more)
crates/renderide/shaders/modules/: alpha_clip_sample.wgsl  birp_light.wgsl  cubemap_storage.wgsl  diffuse_lighting.wgsl  filter_vertex.wgsl  ggx_prefilter.wgsl  globals.wgsl  grab_pass.wgsl  pbs_brdf.wgsl  pbs_cluster.wgsl  pbs_displace.wgsl  pbs_normal.wgsl  per_draw.wgsl  procedural_sky.wgsl  reflection_probes.wgsl  scene_depth_sample.wgsl  sh2_ambient.wgsl  skybox_common.wgsl  skybox_evaluator.wgsl  uv_utils.wgsl  variant_bits.wgsl  xiexe_toon2_alpha.wgsl  xiexe_toon2_base.wgsl  xiexe_toon2_lighting.wgsl  xiexe_toon2_outline.wgsl  xiexe_toon2_surface.wgsl
crates/renderide/src/: app.rs  assets.rs  backend.rs  camera.rs  concurrency.rs  config.rs  diagnostics.rs  frontend.rs  gpu.rs  gpu_pools.rs  gpu_resource.rs  input.rs  ipc.rs  launch_mode.rs  lib.rs  main.rs  materials.rs  mesh_deform.rs  occlusion.rs  passes.rs  present.rs  profiling.rs  reflection_probes.rs  render_graph.rs  run_error.rs  runtime.rs  scene.rs  shared.rs  skybox.rs  stencil.rs  world_mesh.rs  xr.rs
crates/renderide/src/app/: bootstrap.rs  driver.rs  exit.rs  frame_clock.rs  frame_loop.rs  headless.rs  redraw_plan.rs  renderide_app.rs  startup.rs  window_icon.rs
crates/renderide/src/assets/: asset_transfer_queue.rs  material_properties.rs  material_property_host.rs  material_update_batch.rs  mesh.rs  mod.rs  native_ui_blend.rs  registry.rs  shader.rs  texture.rs  ui_material_contract.rs  util.rs  video.rs
crates/renderide/src/backend/: asset_transfers.rs  cluster_gpu.rs  coordinator.rs  debug_draw.rs  debug_hud_bundle.rs  embedded_material_bind.rs  embedded_texture_resolve.rs  embedded_uniform_pack.rs  facade.rs  frame_gpu.rs  frame_resource_manager.rs  graph.rs  history_registry.rs  light_gpu.rs  manifest_material_bind.rs  material_property_reader.rs  material_system.rs  mesh_deform_scratch.rs  mod.rs  occlusion.rs  per_draw_resources.rs  per_view_resource_map.rs  reflection_probe_sh2.rs  render_backend.rs  resource_scope.rs  (+3 more)
crates/renderide/tests/: architecture_layers.rs  clustered_light_shader_audit.rs  config_loading.rs  decoupling.rs  instancing_batches.rs  material_uv_flip_audit.rs  reflection_probe_sources.rs  render_graph_compile.rs  shader_module_audit.rs  shared_packing_roundtrip.rs
crates/renderide/wgsl_modules/: ui_text_unlit.wgsl  ui_unlit.wgsl  uniform_ring.wgsl
(+1390 files in other folders)
